--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -71,7 +71,8 @@
 
         <div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
           <h1 class="wow fadeInUp" data-wow-delay="0.6s">О Проекте</h1>
-          <p class="wow fadeInUp" data-wow-delay="0.9s">Возможно, Вы столкнулись с трудностями, находитесь в кризисе и
+          <p class="wow fadeInUp justifyallignment" data-wow-delay="0.9s">Возможно, Вы столкнулись с трудностями,
+            находитесь в кризисе и
             не знаете, где найти опору… От сложных ситуаций в жизни никто не застрахован, нельзя изолировать себя от
             потерь, как бы мы ни старались сохранять дистанцию. Каждый из нас проходит определенные периоды разного рода
             изменений, которые трансформируют нашу личность, мы становимся старше и, наверное, мудрее…
@@ -130,11 +131,10 @@
         </div>
 
         <div class="clearfix"></div>
-
         <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
           <div class="section-title text-center">
-            <h1>Snapshot Team</h1>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+            <h1>Психологические прогрыммы.</h1>
+            <h3>Описание психологических программ.</h3>
           </div>
         </div>
 
@@ -144,155 +144,38 @@
           <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="team-thumb">
               <div class="image-holder">
-                <img src="images/team-img1.jpg" class="img-responsive img-circle" alt="Mary">
+                <img src="images/right-image.png" class="img-responsive img-circle" alt="Mary">
               </div>
-              <h2 class="heading">Mary, CEO</h2>
-              <p class="description">Aliquam ac justo est. Praesent feugiat cursus est.</p>
+              <h2 class="heading">"Выбираю свою жизнь"</h2>
+              <p class="description"></p>
             </div>
           </div>
 
           <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="team-thumb">
               <div class="image-holder">
-                <img src="images/team-img2.jpg" class="img-responsive img-circle" alt="Jack">
+                <img src="images/right-image.png" class="img-responsive img-circle" alt="Jack">
               </div>
-              <h2 class="heading">Jack, Founder</h2>
-              <p class="description">Maecenas sed diam eget risus varius blandit sit non.</p>
+              <h2 class="heading">Гендерная осознанность.</h2>
+              <p class="description"> Существуют ли "настоящие" мужчины и "идеальные" женщины?</p>
             </div>
           </div>
 
           <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
             <div class="team-thumb">
               <div class="image-holder">
-                <img src="images/team-img3.jpg" class="img-responsive img-circle" alt="Linda">
+                <img src="images/right-image.png" class="img-responsive img-circle" alt="Linda">
               </div>
-              <h2 class="heading">Linda, Manager</h2>
-              <p class="description">Phasellus nec ante in nunc molestie tincidunt ut eu diam.</p>
-            </div>
-          </div>
-
-          <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
-            <div class="team-thumb">
-              <div class="image-holder">
-                <img src="images/team-img4.jpg" class="img-responsive img-circle" alt="Sandy">
-              </div>
-              <h2 class="heading">Sandy, Director</h2>
-              <p class="description">Curabitur vulputate euismod neque et tincidunt.</p>
-            </div>
-          </div>
-
-          <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
-            <div class="team-thumb">
-              <div class="image-holder">
-                <img src="images/team-img5.jpg" class="img-responsive img-circle" alt="Lukia">
-              </div>
-              <h2 class="heading">Lukia, Fashion</h2>
-              <p class="description">Maecenas sed diam eget risus varius blandit sit.</p>
-            </div>
-          </div>
-
-          <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
-            <div class="team-thumb">
-              <div class="image-holder">
-                <img src="images/team-img6.jpg" class="img-responsive img-circle" alt="George">
-              </div>
-              <h2 class="heading">George, Admin</h2>
-              <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
-            </div>
-          </div>
-
-          <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
-            <div class="team-thumb">
-              <div class="image-holder">
-                <img src="images/team-img7.jpg" class="img-responsive img-circle" alt="Day">
-              </div>
-              <h2 class="heading">Day, Accountant</h2>
-              <p class="description">Maecenas sed diam eget risus varius blandit sit.</p>
-            </div>
-          </div>
-
-          <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
-            <div class="team-thumb">
-              <div class="image-holder">
-                <img src="images/team-img8.jpg" class="img-responsive img-circle" alt="Lynn">
-              </div>
-              <h2 class="heading">Lynn, Marketing</h2>
-              <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+              <h2 class="heading">Вот такой я – подросток!</h2>
+              <p class="description"></p>
             </div>
           </div>
 
         </div>
         <!-- end team carousel -->
-
       </div>
     </div>
   </section>
-
-
-  <!-- Gallery section -->
-
-  <section id="gallery">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-offset-2 col-md-8 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
-          <div class="section-title">
-            <h1>Gallery</h1>
-            <p>Nullam scelerisque, quam nec iaculis vulputate, arcu ligula sollicitudin nisl, ac volutpat erat nulla a
-              arcu.</p>
-          </div>
-        </div>
-
-        <ul class="grid cs-style-4">
-          <li class="col-md-6 col-sm-6">
-            <figure>
-              <div><img src="images/gallery-img1.jpg" alt="image 1"></div>
-              <figcaption>
-                <h1>Sapien arcu</h1>
-                <small>Cum sociis natoque penatibus et magnis dis parturient montes.</small>
-                <a href="#">Read More</a>
-              </figcaption>
-            </figure>
-          </li>
-
-          <li class="col-md-6 col-sm-6">
-            <figure>
-              <div><img src="images/gallery-img2.jpg" alt="image 2"></div>
-              <figcaption>
-                <h1>Aliquam erat</h1>
-                <small>Suspendisse venenatis quam sed libero euismod feugiat.</small>
-                <a href="#">Details</a>
-              </figcaption>
-            </figure>
-          </li>
-
-          <li class="col-md-6 col-sm-6">
-            <figure>
-              <div><img src="images/gallery-img3.jpg" alt="image 3"></div>
-              <figcaption>
-                <h1>Cras ante sem</h1>
-                <small>Aenean urna massa, convallis vehicula velit et, dictum pellentesque nisi.</small>
-                <a href="#">Learn More</a>
-              </figcaption>
-            </figure>
-          </li>
-
-          <li class="col-md-6 col-sm-6">
-            <figure>
-              <div><img src="images/gallery-img4.jpg" alt="image 4"></div>
-              <figcaption>
-                <h1>Sed ornare</h1>
-                <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
-                <a href="#">Full Post</a>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
-
-      </div>
-    </div>
-  </section>
-
 
   <!-- Contact section -->
 
@@ -303,9 +186,8 @@
         <div class="col-md-offset-1 col-md-10 col-sm-12">
 
           <div class="col-lg-offset-1 col-lg-10 section-title wow fadeInUp" data-wow-delay="0.4s">
-            <h1>Send a message</h1>
-            <p>Nunc suscipit ante in lectus laoreet, nec pharetra diam dictum. Lorem ipsum dolor sit amet, consectetur
-              adipiscing elit. </p>
+            <h1>Отправить сообщение</h1>
+            <p>Все предлоежения и пожелания отправляйте на указанную почту. Ниже приведены ссылки на инстаграмм и телеграм канал. </p>
           </div>
 
           <form action="#" method="post" class="wow fadeInUp" data-wow-delay="0.8s">
@@ -319,7 +201,7 @@
               <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message"></textarea>
             </div>
             <div class="col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6">
-              <input type="submit" class="form-control" value="SEND MESSAGE">
+              <input type="submit" class="form-control" value="Отправить Сообщение">
             </div>
           </form>
 
@@ -340,15 +222,11 @@
         <div class="col-md-12 col-sm-12">
 
           <ul class="social-icon">
-            <li><a href="#" class="fa fa-instagram wow fadeInUp" data-wow-delay="0.4s"></a></li>
-            <li><a href="#" class="fa fa-telegram wow fadeInUp" data-wow-delay="0.6s"></a></li>
-            <li><a href="#" class="fa fa-instagram wow fadeInUp" data-wow-delay="0.8s"></a></li>
-            <li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="1.0s"></a></li>
+            <li><a href="https://www.instagram.com/stupeni_zhizni/" class="fa fa-instagram wow fadeInUp"
+                data-wow-delay="0.4s"></a></li>
+            <li><a href="https://t.me/stupeni_zhizni" class="fa fa-telegram wow fadeInUp" data-wow-delay="0.8s"></a>
+            </li>
           </ul>
-
-          <p class="wow fadeInUp" data-wow-delay="1s">Copyright &copy; 2016 Snapshot Studio |
-            Design: <a href="https://plus.google.com/+templatemo" title="free css templates"
-              target="_blank">Templatemo</a></p>
 
         </div>
 
