--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html class="no-js" lang="en">
 
@@ -8,21 +9,30 @@
     <meta name="description" content="Проект психологической помощи. Оказывается онлайн и оффлайн консультация при семейных проблемах">
     <meta name="keywords" content="Психология ,Психологическая консультация, Семейная психология, Подростковая психология">
     <meta name="author" content="Рогова Ирина">
+    <meta name="yandex-verification" content="1976600d12410705" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+   <!--====== Favicon Icon ======-->
+   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
 
-    <link rel="stylesheet" href="assets/css/animate.css">
+   <!--====== Slick CSS ======-->
+   <link rel="stylesheet" href="assets/css/animate.css">
 
-    <link rel="stylesheet" href="assets/css/slick.css">
+   <!--====== Slick CSS ======-->
+   <link rel="stylesheet" href="assets/css/slick.css">
 
-    <link rel="stylesheet" href="assets/css/lineicons.css">
+   <!--====== LineIcons CSS ======-->
+   <link rel="stylesheet" href="assets/css/lineicons.css">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+   <!--====== Bootstrap CSS ======-->
+   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="assets/css/default.css">
+   <!--====== Default CSS ======-->
+   <link rel="stylesheet" href="assets/css/default.css">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+   <!--====== Style CSS ======-->
+   <link rel="stylesheet" href="assets/css/style.css">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156909554-1"></script>
 <script>
@@ -103,6 +113,8 @@
                 <li><a href="https://t.me/stupeni_zhizni"><i class="lni lni-telegram-original"></i></a></li>
                 <li><a href="https://www.instagram.com/i_rogova_psychologist/"><i class="lni lni-instagram-filled"></i></a></li>
                 <li><a href="skype:live:irina.rogova_2?chat"><i class="lni lni-skype"></i></a></li>
+                <li><a href="https://wa.me/375447153518"><i class="lni lni-whatsapp"></i></a></li>
+                <li><a href="viber://chat?number=375447153518"><i class="lni lni-whatsapp"></i></a></li>
 
             </ul>
             <div class="container">
@@ -110,9 +122,9 @@
                     <div class="col-lg-6">
                         <div class="header_hero_content mt-45">
                             <h5 class="header_sub_title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.2s">
-                                Здравствуйте.Я </h5>
+                                Здравствуйте! </h5>
                             <h2 class="header_title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">
-                                Ирина Рогова</h2>
+                                Я - Ирина Рогова</h2>
                             <span class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
                                 Профессиональный практикующий психолог</span>
                             <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Психологии посвятила последние 
@@ -149,15 +161,14 @@
                         <p> Вероятно, Вы оказались на этой странице в процессе поиска решений Вашей проблемы. </p>
                         <p> Что это может быть? </p>
                         <ul>
-                            <li>Вы переживаете трудности в отношениях и не знаете, как сними справиться (с партнером, детьми, родителями, родственниками, друзьями);</li>
-                            <li>Вы запутались в семейных сценариях, продолжаете проигрывать родительские установки и правила в своей уже взрослой жизни;</li>
-                            Вы столкнулись с кризисом, травмой и чувствуете, что не можете найти опору в жизни (период проживания затянулся и начались проблемы со здоровьем);
-                            Вы находитесь перед выбором, который очень важен для вас;
-                            Вы долгое время испытываете страх, стыд, растерянность, печаль и не можете разобраться в данных эмоциях;
-                            Ваши потребности не удовлетворены...
+                            <li class="indent"><i class="lni "><div class="circle"><span></span></div></i>  Вы переживаете трудности в отношениях и не знаете, как с ними справиться (с партнером, детьми, родителями, родственниками, друзьями);</li>
+                            <li class="indent"><i class="lni "><div class="circle"><span></span></div></i>  Вы запутались в семейных сценариях, продолжаете проигрывать родительские установки и правила в своей уже взрослой жизни;</li>
+                            <li class="indent"><i class="lni "><div class="circle"><span></span></div></i>  Вы столкнулись с кризисом, травмой и чувствуете, что не можете найти опору в жизни (период проживания затянулся и начались проблемы со здоровьем);</li>
+                            <li class="indent"><i class="lni "><div class="circle"><span></span></div></i>  Вы находитесь перед выбором, который очень важен для вас;</li>
+                            <li class="indent"><i class="lni "><div class="circle"><span></span></div></i>  Вы долгое время испытываете страх, стыд, растерянность, печаль и не можете разобраться в данных эмоциях;</li>
+                            <li class="indent"><i class="lni "><div class="circle"><span></span></div></i>  Ваши потребности не удовлетворены...</li>
                         </ul>
-                            В такие моменты нужно найти в себе смелость обратиться за помощью к профессиональному психологу.</p>
-                      
+                            <p> В такие моменты нужно найти в себе смелость обратиться за помощью к профессиональному психологу.</p>
                         </div>
                     </div>
                 </div>
@@ -360,14 +371,14 @@
                         </div>
                         <div class="price_body">
                             <ul>
-                                <li><i class="lni "><div class="circle"><span>1</span></div></i>Родительские убеждения и правила</li>
-                                <li><i class="lni "><div class="circle"><span>2</span></div></i>Ловушки прощения</li>
+                                <li><i class="lni "><div class="circle"><span>1</span></div></i>Родительские убеждения и правила.</li>
+                                <li><i class="lni "><div class="circle"><span>2</span></div></i>Ловушки прощения.</li>
                                 <li><i class="lni "><div class="circle"><span>3</span></div></i>Кто несет ответственность за чувства?</li>
-                                <li><i class="lni "><div class="circle"><span>4</span></div></i>Начало самоопределения</li>
-                                <li><i class="lni "><div class="circle"><span>5</span></div></i>Боль по утраченному детству</li>
-                                <li><i class="lni "><div class="circle"><span>6</span></div></i>Конфронтация с родителями</li>
-                                <li><i class="lni "><div class="circle"><span>7</span></div></i>Принятие изменений</li>
-                                <li><i class="lni "><div class="circle"><span>8</span></div></i>Обретение своей жизни</li>
+                                <li><i class="lni "><div class="circle"><span>4</span></div></i>Начало самоопределения.</li>
+                                <li><i class="lni "><div class="circle"><span>5</span></div></i>Боль по утраченному детству.</li>
+                                <li><i class="lni "><div class="circle"><span>6</span></div></i>Конфронтация с родителями.</li>
+                                <li><i class="lni "><div class="circle"><span>7</span></div></i>Принятие изменений.</li>
+                                <li><i class="lni "><div class="circle"><span>8</span></div></i>Обретение своей жизни.</li>
                             </ul>
                         </div>
                         <div class="price_btn">
@@ -384,13 +395,13 @@
                         </div>
                         <div class="price_body">
                             <ul>
-                                <li><i class="lni "><div class="circle"><span>1</span></div></i>Послушный ребенок (дочь, сын). Семейные сценарии – найти и обезвредить</li>
-                                <li><i class="lni "><div class="circle"><span>2</span></div></i>Традиционные мужские и женские роли (соблазны, ловушки, выгоды)</li>
+                                <li><i class="lni "><div class="circle"><span>1</span></div></i>Послушный ребенок (дочь, сын). Семейные сценарии – найти и обезвредить.</li>
+                                <li><i class="lni "><div class="circle"><span>2</span></div></i>Традиционные мужские и женские роли (соблазны, ловушки, выгоды).</li>
                                 <li><i class="lni "><div class="circle"><span>3</span></div></i>Женщина – жертва в отношениях? Мужчина – глава семьи?</li>
-                                <li><i class="lni "><div class="circle"><span>4</span></div></i>«Неправильные» чувства. Практики работы со злостью, виной, страхом</li>
-                                <li><i class="lni "><div class="circle"><span>5</span></div></i>Доверие к себе. Как полюбить и принять себя</li>
-                                <li><i class="lni "><div class="circle"><span>6</span></div></i>Психологические границы. Определение территории</li>
-                                <li><i class="lni "><div class="circle"><span>7</span></div></i>Партнерство без иллюзий. Психологическая зрелость в браке</li>
+                                <li><i class="lni "><div class="circle"><span>4</span></div></i>«Неправильные» чувства. Практики работы со злостью, виной, страхом.</li>
+                                <li><i class="lni "><div class="circle"><span>5</span></div></i>Доверие к себе. Как полюбить и принять себя.</li>
+                                <li><i class="lni "><div class="circle"><span>6</span></div></i>Психологические границы. Определение территории.</li>
+                                <li><i class="lni "><div class="circle"><span>7</span></div></i>Партнерство без иллюзий. Психологическая зрелость в браке.</li>
                             </ul>
                         </div>
                         <div class="price_btn"> 
@@ -406,7 +417,7 @@
                         </div>
                         <div class="price_body">
                             <ul>
-                                <li><i class="lni "><div class="circle"><span>1</span></div></i>Возрастные особенности подросткового периода</li>
+                                <li><i class="lni "><div class="circle"><span>1</span></div></i>Возрастные особенности подросткового периода.</li>
                                 <li><i class="lni "><div class="circle"><span>2</span></div></i>«Я – самостоятельный(ая)» и «Я – ранимый(ая)». Где баланс?</li>
                                 <li><i class="lni "><div class="circle"><span>3</span></div></i>А что делать с чувствами? (вина, агрессия, безразличие)</li>
                                 <li><i class="lni "><div class="circle"><span>4</span></div></i>Где найти себя?</li>
@@ -429,9 +440,9 @@
                             <h5 class="sub_title">Дополнительная информация</h5>
                             <h3 class="child_title"> Стоимость:
                                 Очные встречи: длительность приема – от 1 до 1.30 часа.
-                                Разовая индивидуальная консультация – 20 BYN.
-                                Для граждан России – 1000 RUB
-                                Провожу онлайн консультации по Skype
+                                Разовая индивидуальная консультация – 30 BYN.
+                                Для граждан России – 1000 RUB.
+                                Провожу онлайн консультации по Skype.
                                 Все цены носят исключительно информационный характер.</h3>
                         </div>
                     </div>
@@ -469,7 +480,7 @@
                             <i class="lni lni-emoji-happy"></i>
                         </div>
                         <div class="counter_content media-body">
-                            <span class="count"><span class="counter">> 300</span></span>
+                            <span class="count"> > <span class="counter"> 500</span></span>
                             <p>Довольных клиентов</p>
                         </div>
                     </div>
@@ -517,9 +528,9 @@
                                 <p>
                                     Стоимость:
                                     Очные встречи: длительность приема – от 1 до 1.30 часа.
-                                    Разовая индивидуальная консультация – 20 BYN.
-                                    Для граждан России – 1000 RUB
-                                    Провожу онлайн консультации по Skype
+                                    Разовая индивидуальная консультация – 30 BYN.
+                                    Для граждан России – 1000 RUB.
+                                    Провожу онлайн консультации по Skype.
                                     Все цены носят исключительно информационный характер.</p>
                             </div>
                             <div class="call_to_action_btn">
@@ -543,6 +554,8 @@
                             <li><a href="https://www.instagram.com/i_rogova_psychologist/"><i class="lni lni-instagram"></i></a></li>
                             <li><a href="https://t.me/stupeni_zhizni"><i class="lni lni-telegram-original"></i></a></li>
                             <li><a href="skype:live:irina.rogova_2?chat"><i class="lni lni-skype"></i></a></li>
+                            <li><a href="https://wa.me/375447153518/?text=urlencodedtext"><i class="lni lni-whatsapp"></i></a></li>
+                            <li><a href="viber://chat?number=375447153518"><i class="lni lni-whatsapp"></i></a></li>
                         </ul>
                     </div>
                 </div>
