--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -128,7 +128,7 @@
                             <span class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">
                                 Профессиональный практикующий психолог</span>
                             <p class="wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Психологии посвятила последние 
-                                20 лет своей жизни и готова оказать Вам квалифицированную психологическую помощь.</p>
+                                23 года своей жизни и готова оказать Вам квалифицированную психологическую помощь.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-7">
@@ -438,12 +438,9 @@
                                 <li></li>
                             </ul>
                             <h5 class="sub_title">Дополнительная информация</h5>
-                            <h3 class="child_title"> Стоимость:
-                                Очные встречи: длительность приема – от 1 до 1.30 часа.
-                                Разовая индивидуальная консультация – 30 BYN.
-                                Для граждан России – 1000 RUB.
+                            <h3 class="child_title"> 
                                 Провожу онлайн консультации по Skype.
-                                Все цены носят исключительно информационный характер.</h3>
+                            </h3>
                         </div>
                     </div>
                 </div>
@@ -492,8 +489,8 @@
                             <i class="lni lni-pyramids"></i>
                         </div>
                         <div class="counter_content media-body">
-                            <span class="count"><span class="counter">20</span></span>
-                            <p>Лет Опыта</p>
+                            <span class="count"><span class="counter">23</span></span>
+                            <p>Года Опыта</p>
                         </div>
                     </div>
                 </div>
@@ -526,12 +523,8 @@
                                 </ul>
                                 <p>Решили обратиться? </p>
                                 <p>
-                                    Стоимость:
-                                    Очные встречи: длительность приема – от 1 до 1.30 часа.
-                                    Разовая индивидуальная консультация – 30 BYN.
-                                    Для граждан России – 1000 RUB.
                                     Провожу онлайн консультации по Skype.
-                                    Все цены носят исключительно информационный характер.</p>
+                                </p>
                             </div>
                             <div class="call_to_action_btn">
                                 <a href="mailto:irina.rogova.77@mail.ru?Subject=Здравствуйте" class="main-btn">Написать</a>
